Fix scrollbar-x issue

--- a/frontend/src/components/CSS/App.css
+++ b/frontend/src/components/CSS/App.css
@@ -193,5 +193,6 @@ html {
 }
 
 .content-container {
-  padding-bottom: 50px
+  padding-bottom: 50px;
+  overflow-x: clip;
 }
